--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="main">
-        <audio id="myAudio" src="/assets/audio/background_audio/Happy (From 'Despicable Me 2') - Pharrell Williams - tải mp3-lời bài hát.mp3"></audio>
+        <audio id="myAudio" src="./assets/audio/background_audio/Happy (From 'Despicable Me 2') - Pharrell Williams - tải mp3-lời bài hát.mp3"></audio>
         <button title="Sound" id="toggleSound" class="bottom-option-btn">
             <i class="fa-solid fa-volume-xmark"></i>
         </button>
